# edisp

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.MD
edisp-core/: Cargo.toml
edisp-core/src/: dispatch.rs  lib.rs  prelude.rs  std_enums.rs
edisp-derive/: Cargo.toml
edisp-derive/src/: lib.rs
src/: container.rs  dispatchers.rs  lib.rs  prelude.rs  std_enums.rs
