[package]
name = "edisp"
version = "0.1.0"
authors = ["Leo Pourcelot <leo.pourcelot@protonmail.com>"]
edition = "2018"
description = "Dispatch-on-collect for Rust enums"
repository = "https://github.com/scileo/edisp"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
