[package]
name = "edisp"
version = "0.0.2"
authors = ["Sasha"]
edition = "2018"
description = "Dispatch-on-collect for Rust enums"
keywords = ["dispatch", "enum"]
categories = ["rust-patterns"]
repository = "https://github.com/scileo/edisp"
license = "MIT OR Apache-2.0"
readme = "README.MD"

[dependencies]
