[package]
name = "edisp"
version = "0.0.3"
authors = ["Sasha"]
edition = "2018"
description = "Dispatch-on-collect for Rust enums"
keywords = ["dispatch", "enum"]
categories = ["rust-patterns"]
repository = "https://github.com/scileo/edisp"
documentation = "https://docs.rs/edisp"
license = "MIT OR Apache-2.0"
readme = "README.MD"

[dependencies]
edisp-core = { path = "edisp-core" }
edisp-derive = { path = "edisp-derive", optional = true }

[features]
default = ["edisp-derive"]
